Some minor improvements related with NullPointerException management and collect method